<resources>
    <string name="app_name">LetsCook</string>
    <string name="name">LETS COOK</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johndoe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Exit</string>
</resources>
